Fix diagram z-index

--- a/src/client/app/flogo.flows.detail.diagram/components/diagram.component.less
+++ b/src/client/app/flogo.flows.detail.diagram/components/diagram.component.less
@@ -26,6 +26,7 @@
   flex-grow: 3;
   overflow: auto;
   background-color: #eeeded;
+  z-index: 1;
 }
 
 .flogo-flows-detail-diagram {
